--- a/maddi_app/templates/includes/navigation.html
+++ b/maddi_app/templates/includes/navigation.html
@@ -30,7 +30,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
                   <div class="py-1">
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Profile</a>
+                    <a href="{% url 'profile' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Profile</a>
                     <a href="{% url 'cart' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Cart</a>
                   </div>
                   <div class="dropdown-divider"></div>
