--- a/maddi_app/templates/accounts/profile.html
+++ b/maddi_app/templates/accounts/profile.html
@@ -4,70 +4,107 @@
 {% load tailwind_filters %}
 
 {% block content %}
-<header class="max-w-lg mx-auto">
-    <a href="{% url 'index' %}">
-        <section class="hero container max-w-screen-lg mx-auto pb-10">
-            <img class="mx-auto" src="../../../static/images/Maddi.png">
-        </section>
-    </a>
-</header>
-
-<main class="bg-white max-w-lg mx-auto p-8 md:p-12 my-10 rounded-lg shadow-2xl" x-data="cities()" x-init="loadCity()">
-    <section>
-        <h3 class="font-bold text-2xl">Welcome to Maddi</h3>
-        <p class="text-gray-600 pt-2">Sign in to your account.</p>
-    </section>
-
-    <section class="mt-6">
-        <form id="login_form" class="flex flex-col" method="POST">
-            {% csrf_token %}
-
-            {{ user_form|crispy }}
-            {% if not user.is_admin and not user.is_staff %}
-                {{ customer_form.phone_number|as_crispy_field }}
-                {{ customer_form.address|as_crispy_field }}
-                <div id="div_id_customer-province" class="mb-3"> 
-                    <label for="id_customer-province" class="block text-gray-700 text-sm font-bold mb-2">
-                        Province<span class="asteriskField">*</span> 
-                    </label> 
-                    <select x-model="selectedProvince" x-on:change="loadCities()">
-                        <template x-for="province in provinces" :key="province">
-                            <option :value="province.province_id" x-text="province.province"></option>
-                        </template>
-                    </select>
-                </div>
-                <template x-if="cities.length > 0">
-                    <div id="div_id_customer-city" class="mb-3"> 
-                        <label for="id_customer-city" class="block text-gray-700 text-sm font-bold mb-2">
-                            City<span class="asteriskField">*</span> 
-                        </label>
-                        <select name="customer-city" x-model="selectedCity">
-                            <template x-for="city in cities" :key="city">
-                                <option :value="city.city_id" x-text="city.city_name"></option>
-                            </template>
-                        </select>
-                    </div>
-                </template>
-                {{ customer_form.postal_code|as_crispy_field }}
-            {% endif %}
-
-        </form>
-        <dv class="flex flex-col">
-            <button class="mt-6 bg-maddi-1 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200" type="submit" form="login_form">Sign In</button>
-        </dv>
-    </section>
-</main>
-
-<div class="max-w-lg mx-auto text-center mt-12 mb-6">
-    <p class="text-black">Don't have an account? <a href="/register" class="font-bold hover:underline">Sign up</a>.</p>
-</div>
-<footer>
-    <section class="mt-10 flex flex-col">
-        <button class="bg-maddi-1 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200" type="button">
-            <a href="{% url 'index' %}">Back to homepage</a>
-        </button>
-    </section>
-</footer>
+      <div class="container mx-auto px-6 my-8" x-data="cities()" x-init="loadCity()">
+          <div class="flex flex-wrap">
+              <div class="container mx-auto">
+                <h3 class="text-gray-700 text-2xl font-medium pb-12">Account Settings</h3>
+                  <div class="flex ">
+                      <div class="w-1/4 mr-6">
+                          <div class="mb-4">
+                            <img class="rounded-lg ml-14" src="../../../static/images/profile.png" style="widows: 250px;; height:250px;">
+                          </div>
+                          <div class="mb-12">
+                              <div class="text-2xl font-medium text-grey-darkest text-center">
+                                {{ user.username }}
+                              </div>
+                              <div class="text-xl text-gray-500 font-light text-center">
+                                {{ user.email }}
+                              </div>
+                          </div>
+                      </div>
+                      <div class="w-3/4 ml-6 border-l-2">
+                        <form id="login_form" class="flex flex-col" method="POST">
+                            {% csrf_token %}
+                          <div class="flex items-center">
+                              <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                  Email
+                              </div>
+                          </div>
+                          <div class="ml-6 mb-2 w-1/2">
+                            {{ user_form.email|as_crispy_field }}
+                          </div>
+                          <div class="flex items-center">
+                              <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                  Password
+                              </div>
+                          </div>
+                          <div class="ml-6 mb-2 w-1/2">
+                            {{ user_form.password|as_crispy_field }}
+                          </div>
+                          <div class="flex items-center">
+                              <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                  Username
+                              </div>
+                          </div>
+                          <div class="ml-6 mb-2 w-1/2">
+                            {{ user_form.username|as_crispy_field }}
+                          </div>
+                          <div class="flex items-center">
+                              <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                  Name
+                              </div>
+                          </div>
+                          <div class="ml-6 mb-2 w-1/2">
+                            {{ user_form.first_name|as_crispy_field }}
+                            {{ user_form.last_name|as_crispy_field }}
+                          </div>
+                          {% if not user.is_admin and not user.is_staff %}
+                          <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                              Address
+                          </div>
+                          <div class="grid grid-cols-3 gap-4">
+                            <div id="div_id_customer-province" class="mb-3 ml-6 w-full w-1/3"> 
+                                <label for="id_customer-province" class="block text-gray-700 text-sm font-bold mb-2">
+                                    Province<span class="asteriskField">*</span> 
+                                </label> 
+                                <select x-model="selectedProvince" x-on:change="loadCities()">
+                                    <template x-for="province in provinces" :key="province">
+                                        <option :value="province.province_id" x-text="province.province"></option>
+                                    </template>
+                                </select>
+                            </div>
+                                <div id="div_id_customer-city" class="mb-3 ml-6 w-full w-1/3"> 
+                                    <label for="id_customer-city" class="block text-gray-700 text-sm font-bold mb-2">
+                                        City<span class="asteriskField">*</span> 
+                                    </label>
+                                    <select name="customer-city" x-model="selectedCity">
+                                        <template x-for="city in cities" :key="city">
+                                            <option :value="city.city_id" x-text="city.city_name"></option>
+                                        </template>
+                                    </select>
+                                </div>
+                            <div class="ml-6 mb-2 mt-2 w-full w-1/3">
+                                {{ customer_form.postal_code|as_crispy_field }}
+                                </div>
+                            </div>
+                          <div class="ml-6 mb-2 w-1/2">
+                          {{ customer_form.address|as_crispy_field }}
+                          </div>
+                          <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                            Phone number
+                          </div>
+                          <div class="ml-6 mb-2 w-1/2">
+                            {{ customer_form.phone_number|as_crispy_field }}
+                          </div>
+                          {% endif %}
+                          <div class="flex flex-col">
+                            <button class="ml-6 w-1/4 bg-maddi-1 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200" type="submit" form="login_form">Save changes</button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </div>
 {% endblock %}
 
 {% block js %}
