--- a/maddi_app/templates/maddi_app/shop.html
+++ b/maddi_app/templates/maddi_app/shop.html
@@ -11,7 +11,7 @@
         </div>
         {% if user.is_superuser or user.is_staff %}
         <div class="w-full md:w-1/2 md:text-right">
-          <a href="{% url 'add_item' %}">
+          <a href="{% url 'create_item' %}">
             <button type="button" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
               Add new item
           </button>
