--- a/maddi_app/templates/maddi_app/user.html
+++ b/maddi_app/templates/maddi_app/user.html
@@ -5,6 +5,11 @@
 {% block content %}
 <div class="container mx-auto px-6 my-8">
   <h2 class="mb-8 leading-tight tracking-tight font-bold text-gray-800 text-2xl md:text-3xl">Users List</h2>
+  <a href="{% url 'create_user' %}">
+    <button type="button" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
+      Add new user
+    </button>
+  </a>
   <table class="border-collapse w-full">
     <thead>
         <tr>
@@ -42,18 +47,22 @@
           </td>
           <td class="w-full lg:w-auto p-3 text-gray-800 text-center border border-b text-center block lg:table-cell relative lg:static">
             <span class="lg:hidden absolute top-0 left-0 bg-blue-200 px-2 py-1 text-xs font-bold uppercase">Actions</span>
-            <button
-              type="button"
-              class="border border-yellow-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-yellow-500 focus:outline-none focus:shadow-outline"
-            >
-              Edit
-            </button>
-            <button
-              type="button"
-              class="border border-red-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-red-500 focus:outline-none focus:shadow-outline"
-            >
-              Remove
-            </button>
+            <a href="{% url 'update_user'  id=user.id %}">
+              <button
+                type="button"
+                class="border border-yellow-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-yellow-500 focus:outline-none focus:shadow-outline"
+              >
+                Edit
+              </button>
+            </a>
+            <a href="{% url 'delete_user'  id=user.id %}">
+              <button
+                type="button"
+                class="border border-red-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-red-500 focus:outline-none focus:shadow-outline"
+              >
+                Remove
+              </button>
+            </a>
           </td>
         </tr>
       {% endfor %}
