change id to increment counter in users table

--- a/maddi_app/templates/maddi_app/user.html
+++ b/maddi_app/templates/maddi_app/user.html
@@ -13,7 +13,7 @@
   <table class="border-collapse w-full">
     <thead>
         <tr>
-            <th class="p-3 text-center font-bold uppercase bg-maddi-1 text-white border border-black hidden lg:table-cell">ID</th>
+            <th class="p-3 text-center font-bold uppercase bg-maddi-1 text-white border border-black hidden lg:table-cell"></th>
             <th class="p-3 text-center font-bold uppercase bg-maddi-1 text-white border border-black lg:table-cell">User</th>
             <th class="p-3 text-center font-bold uppercase bg-maddi-1 text-white border border-black lg:table-cell">Name</th>
             <th class="p-3 text-center font-bold uppercase bg-maddi-1 text-white border border-black lg:table-cell">Role</th>
@@ -25,7 +25,7 @@
         <tr class="bg-white lg:hover:bg-gray-100 flex lg:table-row flex-row lg:flex-row flex-wrap lg:flex-no-wrap mb-10 lg:mb-0">
           <td class="w-full lg:w-auto p-3 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
               <span class="lg:hidden absolute top-0 left-0 bg-blue-200 px-2 py-1 text-xs font-bold uppercase">ID</span>
-              {{ user.id }}
+              {{ forloop.counter }}
           </td>
           <td class="w-full lg:w-auto p-3 text-gray-800 text-center border border-b text-center block lg:table-cell relative lg:static">
               <span class="lg:hidden absolute top-0 left-0 bg-blue-200 px-2 py-1 text-xs font-bold uppercase">User</span>
