--- a/maddi_app/templates/maddi_app/cart.html
+++ b/maddi_app/templates/maddi_app/cart.html
@@ -4,123 +4,93 @@
 
 {% block content %}
 <div class="container mx-auto px-6 my-8">
-    <div class="flex flex-wrap">
-      <div class="w-3/4">
-        <h3 class="text-gray-700 text-2xl font-medium">Cart</h3>
-            {% for cart in carts %}
-            <div>
-              <div class="flex bg-white">
-                <div class="p-2">
-                  <a href="#">
-                    <img src="{{ cart.item.image.url }}" class="mt-4" style="width: 100px; height: 100px;"> 
-                  </a>
+    <div class="row">
+        <div class="col">
+            <div class="flex flex-wrap">
+                <div class="w-3/4">
+                    <h3 class="text-gray-700 text-2xl font-medium">Cart</h3>
+                    {% for cart in carts %}
+                        <div class="flex bg-white">
+                            <div class="p-2">
+                            <a href="#">
+                                <img src="{{ cart.item.image.url }}" class="mt-4" style="width: 100px; height: 100px;"> 
+                            </a>
+                            </div>
+                            <div class="flex-auto text-sm w-32 mt-8">
+                                <div class="font-bold">{{ cart.item }}</div>
+                                <div class="truncate">Rp. {{ cart.item.price }}</div>
+                                <div>
+                                  <form >
+                                  <input class="" type="text" id="message" name="message" placeholder="Notes for this item">
+                                  </form >
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="row mt-2">
+                            <div class="col-6 ml-2">
+                            </div>
+                            <div class="col-3"> 
+                                Hapus barang dari cart <span class="mx-2 text-xl">| </span><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-1 ml-0 float-left"> 
+
+                            </div>
+                            <div class="col">
+                                <input class="border h-6 w-20 rounded-xl text-center" type="number" value="{{ cart.quantity }}" onchange="console.log(this.value)">
+                            </div>
+                        </div>
+                        <hr class="pb-6 mt-2">
+                    {% endfor %}
+        </div>
+        <div class="col-3">
+            <div class="absolute ml-4 w-full z-10">
+                <div class="w-72 rounded border-2 p-1">
+                    <div class="p-2 flex bg-white">
+                        <div class="flex-auto text-sm w-32">
+                            <div class="font-bold">Subtotal</div>
+                        </div>
+                    </div>
+                    <div class="p-2 flex bg-white border-b border-gray-100">
+                        <div class="flex-auto text-sm w-32">
+                            <div class="truncate">Total Price</div>
+                        </div>
+                        <div class="flex flex-col w-18 font-medium items-end">
+                            Rp. {{ cart.total_price}}
+                        </div>
+                    </div>
+                    <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                        <div class="flex-auto text-sm w-32">
+                            <div class="font-bold">Total price</div>
+                        </div>
+                        <div class="flex flex-col w-18 font-medium items-end font-bold">
+                            Rp. {{ cart.total_price}}</div>
+                    </div>
+                    <div class="p-4 justify-center flex">
+                        <button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold 
+                            hover:bg-teal-700
+                            bg-maddi-1 
+                            text-white
+                            w 
+                            border duration-200 ease-in-out 
+                            border-teal-600 transition">Checkout</button>
+                    </div>
                 </div>
-                <div class="flex-auto text-sm w-32 mt-8">
-                    <div class="font-bold">{{ cart.item }}</div>
-                    <div class="truncate">Rp. {{ cart.item.price }}</div>
-                </div>
-            </div> 
-            <div class="row mt-2">
-              <div class="col-6 ml-2">
-                Tuliskan catatan untuk barang ini
-              </div>
-              <div class="col-4"> 
-                Hapus barang dari cart |
-              </div>
-              <div class="col">
-                tes
-              </div>
             </div>
-            <hr class="pb-6 mt-2">
-            {% endfor %}
-      </div>
-      <div class="w-1/4">
-        <div class="p-5">
-          <div class="flex h-64 justify-center">
-              <div class="relative ">
-                  <div class="absolute w-full  rounded-b border-t-0 z-10">
-                      <div class="shadow-xl w-64">
-                          <div class="p-2 flex bg-white hover:bg-gray-100 cursor-pointer border-b border-gray-100">
-                              <div class="p-2 w-12"><img src="https://dummyimage.com/50x50/bababa/0011ff&amp;text=50x50" alt="img product"></div>
-                              <div class="flex-auto text-sm w-32">
-                                  <div class="font-bold">Product 1</div>
-                                  <div class="truncate">Product 1 description</div>
-                                  <div class="text-gray-400">Qt: 2</div>
-                              </div>
-                              <div class="flex flex-col w-18 font-medium items-end">
-                                  <div class="w-4 h-4 mb-6 hover:bg-red-200 rounded-full cursor-pointer text-red-700">
-                                      <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 ">
-                                          <polyline points="3 6 5 6 21 6"></polyline>
-                                          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                                          <line x1="10" y1="11" x2="10" y2="17"></line>
-                                          <line x1="14" y1="11" x2="14" y2="17"></line>
-                                      </svg>
-                                  </div>
-                                  $12.22</div>
-                          </div>
-                          <div class="p-2 flex bg-white hover:bg-gray-100 cursor-pointer border-b border-gray-100">
-                              <div class="p-2 w-12"><img src="https://dummyimage.com/50x50/bababa/0011ff&amp;text=50x50" alt="img product"></div>
-                              <div class="flex-auto text-sm w-32">
-                                  <div class="font-bold">Product 2</div>
-                                  <div class="truncate">Product 2 long description</div>
-                                  <div class="text-gray-400">Qt: 2</div>
-                              </div>
-                              <div class="flex flex-col w-18 font-medium items-end">
-                                  <div class="w-4 h-4 mb-6 hover:bg-red-200 rounded-full cursor-pointer text-red-700">
-                                      <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 ">
-                                          <polyline points="3 6 5 6 21 6"></polyline>
-                                          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                                          <line x1="10" y1="11" x2="10" y2="17"></line>
-                                          <line x1="14" y1="11" x2="14" y2="17"></line>
-                                      </svg>
-                                  </div>
-                                  $12.22</div>
-                          </div>
-                          <div class="p-2 flex bg-white hover:bg-gray-100 cursor-pointer border-b border-gray-100">
-                              <div class="p-2 w-12"><img src="https://dummyimage.com/50x50/bababa/0011ff&amp;text=50x50" alt="img product"></div>
-                              <div class="flex-auto text-sm w-32">
-                                  <div class="font-bold">Product 3</div>
-                                  <div class="truncate">Product 3 description</div>
-                                  <div class="text-gray-400">Qt: 2</div>
-                              </div>
-                              <div class="flex flex-col w-18 font-medium items-end">
-                                  <div class="w-4 h-4 mb-6 hover:bg-red-200 rounded-full cursor-pointer text-red-700">
-                                      <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 ">
-                                          <polyline points="3 6 5 6 21 6"></polyline>
-                                          <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                                          <line x1="10" y1="11" x2="10" y2="17"></line>
-                                          <line x1="14" y1="11" x2="14" y2="17"></line>
-                                      </svg>
-                                  </div>
-                                  $12.22</div>
-                          </div>
-                          <div class="p-4 justify-center flex">
-                              <button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold cursor-pointer 
-              hover:bg-teal-700 hover:text-teal-100 
-              bg-teal-100 
-              text-teal-700 
-              border duration-200 ease-in-out 
-              border-teal-600 transition">Checkout $36.66</button>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="h-32"></div>
-      </div>
-         
-      </div>
-      </div>
+        </div>
+    </div>
+   
+        <div class="w-1/4">
+            <div class="p-5">
+            <div class="flex h-64 justify-center">
+                <div class="relative ">
+                    
+                </div>
+            </div>
+            <div class="h-32"></div>
+        </div>
+            
+        </div>
+        </div>
     </div>
   </div>
-  
-<div class="w-full flex flex-wrap">
-    <div>Your cart</div>
-    <hr>
-    </div>
-        {% for cart in carts %}
-            {{ cart.item }}
-        {% endfor %}
-    </div>
-</div>
 {% endblock %}
