fix cart and add news section

--- a/maddi_app/templates/includes/footer.html
+++ b/maddi_app/templates/includes/footer.html
@@ -46,21 +46,27 @@
           <ul class="mb-4">
             <li class="mt-2">
               <a
-                href="#"
+                href="https://www.facebook.com/ceritamaddi.id/"
+                target="_blank" 
+                rel="noopener noreferrer"
                 class="hover:underline text-gray-600 hover:text-orange-700"
                 >Facebook</a
               >
             </li>
             <li class="mt-2">
               <a
-                href="#"
+                href="https://www.instagram.com/ceritamaddi/"
+                target="_blank" 
+                rel="noopener noreferrer"
                 class="hover:underline text-gray-600 hover:text-orange-700"
-                >Linkedin</a
+                >Instagram</a
               >
             </li>
             <li class="mt-2">
               <a
-                href="#"
+                href="https://twitter.com/ceritamaddi"
+                target="_blank" 
+                rel="noopener noreferrer"
                 class="hover:underline text-gray-600 hover:text-orange-700"
                 >Twitter</a
               >
