--- a/maddi_app/templates/maddi_app/shop.html
+++ b/maddi_app/templates/maddi_app/shop.html
@@ -25,7 +25,7 @@
         <div class="flex items-end justify-end h-96 w-full bg-cover" style="background-image: url('{{ item.image.url }}'); background-position: center;">
           {% if user.is_superuser or user.is_staff %}
           <button class="p-3 rounded-full bg-red-500 hover:bg-red-700 text-white mx-1 -mb-14 focus:outline-none">
-            <a href="{% url 'delete_item' id=item.id %}" class="hover:text-white">
+            <a href="{% url 'delete_item' id=item.id %}" class="hover:text-white" onclick="return confirm('Delete this item?')">
               <div class="h-5 w-5">
                 <i class="fa fa-times" aria-hidden="true"></i>
               </div>
