--- a/maddi_app/templates/includes/navigation.html
+++ b/maddi_app/templates/includes/navigation.html
@@ -16,7 +16,7 @@
         <li><a class="px-4 hover:text-gray-800 hover:bg-gray-50" href="{% url 'index' %}">Home</a></li>
         <li><a class="px-4 hover:text-gray-800 hover:bg-gray-50" href="{% url 'shop' %}">Shop</a></li>
         <li><a class="px-4 hover:text-gray-800 hover:bg-gray-50" href="{% url 'about' %}">About</a></li>
-        <li><a class="px-4 hover:text-gray-800 hover:bg-gray-50" href="{% url 'payment' %}">Payment Confirmation</a></li>
+        <li><a class="px-4 hover:text-gray-800 hover:bg-gray-50" href="{% url 'news' %}">News</a></li>
         {% if user.is_authenticated %}
           <li>
             <div class="relative inline-block text-left">
@@ -31,7 +31,9 @@
                 <div class="dropdown-menu dropdown-menu-right">
                   <div class="py-1">
                     <a href="{% url 'profile' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Profile</a>
-                    <a href="{% url 'cart' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Cart</a>
+                    {% if not user.is_staff and not user.is_superuser %}
+                      <a href="{% url 'cart' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">Cart</a>
+                    {% endif %}
                   </div>
                   <div class="dropdown-divider"></div>
                   <div class="py-1">
