--- a/maddi_app/templates/maddi_app/cart.html
+++ b/maddi_app/templates/maddi_app/cart.html
@@ -3,94 +3,97 @@
 {% load static %}
 
 {% block content %}
-<div class="container mx-auto px-6 my-8">
+<div class="container px-12 my-8">
     <div class="row">
         <div class="col">
             <div class="flex flex-wrap">
                 <div class="w-3/4">
-                    <h3 class="text-gray-700 text-2xl font-medium">Cart</h3>
+                    <h3 class="text-gray-700 text-4xl font-medium mb-3">Cart</h3>
                     {% for cart in carts %}
                         <div class="flex bg-white">
                             <div class="p-2">
                             <a href="#">
-                                <img src="{{ cart.item.image.url }}" class="mt-4" style="width: 100px; height: 100px;"> 
+                                <img src="{{ cart.item.image.url }}" class="w-48 mr-3"> 
                             </a>
                             </div>
-                            <div class="flex-auto text-sm w-32 mt-8">
-                                <div class="font-bold">{{ cart.item }}</div>
-                                <div class="truncate">Rp. {{ cart.item.price }}</div>
-                                <div>
-                                  <form >
-                                  <input class="" type="text" id="message" name="message" placeholder="Notes for this item">
-                                  </form >
+                            <div class="flex-auto text-sm w-32 mt-2">
+                                <a href="{% url 'retrieve_item' id=cart.item.id %}"><div class="text-gray-700 font-bold text-2xl ">{{ cart.item }}</div></a>
+                                <div class="truncate text-lg mt-2">Rp. {{ cart.item.price }}</div>
+                                <div class="text-muted text-base mt-2">
+                                    {% if cart.message %}
+                                        {{ cart.message }}
+                                    {% else %}
+                                        No notes for this item
+                                    {% endif %}
+                                </div>
+                                <div class="text-muted text-base mt-2">
+                                    Quantity: {{ cart.quantity }}
                                 </div>
                             </div>
+                            <div class="mt-2">
+                                <i class="fa fa-pencil-square-o fa-2x mr-2 cursor-pointer text-gray-700 hover:text-yellow-600" aria-hidden="true" data-toggle="modal" data-target="#edit-{{ cart.id }}"></i>
+                                <a class="text-gray-700 hover:text-red-600" href="{% url 'delete_cart' id=cart.id %}"><i class="fa fa-trash-o fa-2x" aria-hidden="true" onclick="return confirm('Delete this item from cart?')"></i> </a>
+                            </div>
                         </div> 
-                        <div class="row mt-2">
-                            <div class="col-6 ml-2">
+                        <hr class="pb-2 mt-2">
+                        <div class="modal fade" id="edit-{{ cart.id }}" tabindex="-1" role="dialog" aria-labelledby="editModal-{{ cart.id }}" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title">Change item details</h5>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form method="POST" action="{% url 'update_cart' %}" id="editForm-{{ cart.id }}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="id" value="{{ cart.id }}">
+                                        <label class="text-muted" for="message">Notes for this product</label><br>
+                                        <textarea class="w-100 border border-gray-600 p-2" rows="4" type="text" name="message">{{ cart.message }}</textarea>
+                                        <label class="text-muted mt-3" for="quantity">Quantity</label><br>
+                                        <input class="border h-14 w-24 rounded-xl p-3 text-center" type="number" name="quantity" min="1" value="{{ cart.quantity }}">
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="border border-gray-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-gray-600 focus:outline-none focus:shadow-outline" data-dismiss="modal">Close</button>
+                                  <button type="submit" form="editForm-{{ cart.id }}" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">Update</button>
+                                </div>
+                              </div>
                             </div>
-                            <div class="col-3"> 
-                                Hapus barang dari cart <span class="mx-2 text-xl">| </span><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-1 ml-0 float-left"> 
-
-                            </div>
-                            <div class="col">
-                                <input class="border h-6 w-20 rounded-xl text-center" type="number" value="{{ cart.quantity }}" onchange="console.log(this.value)">
-                            </div>
-                        </div>
-                        <hr class="pb-6 mt-2">
+                          </div>
                     {% endfor %}
-        </div>
-        <div class="col-3">
-            <div class="absolute ml-4 w-full z-10">
-                <div class="w-72 rounded border-2 p-1">
-                    <div class="p-2 flex bg-white">
-                        <div class="flex-auto text-sm w-32">
-                            <div class="font-bold">Subtotal</div>
+                </div>
+                <div class="col-3">
+                    <div class="absolute ml-4 w-full z-10">
+                        <div class="w-72 rounded border-2 p-1">
+                            <div class="p-2 flex bg-white">
+                                <div class="flex-auto text-sm w-32">
+                                    <div class="font-bold">Subtotal</div>
+                                </div>
+                            </div>
+                            <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                                <div class="flex-auto text-sm w-32">
+                                    <div class="">Total price</div>
+                                </div>
+                                <div class="flex flex-col w-18 font-medium items-end ">
+                                    Rp. {{ total_price.total_price__sum }}
+                                </div>
+                            </div>
+                            <div class="p-4 justify-center flex">
+                                <a href="{% url 'checkout' %}"><button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold 
+                                    hover:bg-teal-700
+                                    bg-maddi-1 
+                                    text-white
+                                    w 
+                                    border duration-200 ease-in-out 
+                                    border-teal-600 transition">Checkout</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="p-2 flex bg-white border-b border-gray-100">
-                        <div class="flex-auto text-sm w-32">
-                            <div class="truncate">Total Price</div>
-                        </div>
-                        <div class="flex flex-col w-18 font-medium items-end">
-                            Rp. {{ cart.total_price}}
-                        </div>
-                    </div>
-                    <div class="p-2 flex bg-white hover:bg-gray-100 ">
-                        <div class="flex-auto text-sm w-32">
-                            <div class="font-bold">Total price</div>
-                        </div>
-                        <div class="flex flex-col w-18 font-medium items-end font-bold">
-                            Rp. {{ cart.total_price}}</div>
-                    </div>
-                    <div class="p-4 justify-center flex">
-                        <button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold 
-                            hover:bg-teal-700
-                            bg-maddi-1 
-                            text-white
-                            w 
-                            border duration-200 ease-in-out 
-                            border-teal-600 transition">Checkout</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-   
-        <div class="w-1/4">
-            <div class="p-5">
-            <div class="flex h-64 justify-center">
-                <div class="relative ">
-                    
-                </div>
-            </div>
-            <div class="h-32"></div>
-        </div>
-            
-        </div>
-        </div>
-    </div>
-  </div>
+</div>
 {% endblock %}
