--- a/maddi_app/templates/accounts/profile.html
+++ b/maddi_app/templates/accounts/profile.html
@@ -11,7 +11,7 @@
                   <div class="flex ">
                       <div class="w-1/4 mr-6">
                           <div class="mb-4">
-                            <img class="rounded-lg ml-14" src="../../../static/images/profile.png" style="widows: 250px;; height:250px;">
+                            <img class="rounded-lg ml-14" src="../../../static/images/profile.png" style="widows: 250px; height:250px;">
                           </div>
                           <div class="mb-12">
                               <div class="text-2xl font-medium text-grey-darkest text-center">
@@ -73,6 +73,7 @@
                                     </template>
                                 </select>
                             </div>
+                            <template x-if="cities.length > 0">
                                 <div id="div_id_customer-city" class="mb-3 ml-6 w-full w-1/3"> 
                                     <label for="id_customer-city" class="block text-gray-700 text-sm font-bold mb-2">
                                         City<span class="asteriskField">*</span> 
@@ -83,6 +84,7 @@
                                         </template>
                                     </select>
                                 </div>
+                            </template>
                             <div class="ml-6 mb-2 mt-2 w-full w-1/3">
                                 {{ customer_form.postal_code|as_crispy_field }}
                                 </div>
