--- a/maddi_app/templates/includes/navigation.html
+++ b/maddi_app/templates/includes/navigation.html
@@ -4,7 +4,7 @@
       <img src="../../../static/images/Maddi.png" alt="Maddi">
     </a>
     <div class="block lg:hidden">
-      <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none">
+      <button class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-800 hover:border-teal-500 appearance-none focus:outline-none" data-toggle="collapse" data-target="#navbarNav">
         <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
           <title>Menu</title>
           <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
