--- a/maddi_app/templates/maddi_app/checkout.html
+++ b/maddi_app/templates/maddi_app/checkout.html
@@ -1,56 +1,132 @@
 {% extends 'layouts/base.html' %}
 
 {% load static %}
+{% load tailwind_filters %}
 
 {% block content %}
-<div class="container px-12 my-8">
-    <div class="row">
-        <div class="col">
-            <div class="flex flex-wrap">
-                <div class="w-3/4">
-                    <h3 class="text-gray-700 text-4xl font-medium mb-3">Checkout</h3>
-                        <div class="flex bg-white">
-                            <div class="flex-auto text-sm w-32 mt-2">
-                                <a href="{% url 'retrieve_item' id=cart.item.id %}"><div class="text-gray-700 font-bold text-2xl ">{{ cart.item }}</div></a>
-                                <div class="truncate text-lg mt-2">Rp. {{ cart.total_price }}</div>
-                                <div class="text-muted text-base mt-2">
+    <div class="container mx-auto px-6 my-8" x-data="cities()" x-init="loadCity()">
+        <div class="flex flex-wrap">
+            <div class="container mx-auto">
+                <h3 class="text-gray-700 text-2xl font-medium pb-12">Checkout</h3>
+                <div class="flex ">
+                    <div class="w-3/4 ml-6 border-r-2">
+                        <form id="login_form" class="flex flex-col" method="POST">
+                            {% csrf_token %}
+                            <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                Receiver Name
+                            </div>
+                            <label for="fname" class="block text-gray-700 text-sm font-bold mb-3 ml-4">
+                                Receiver Name<span class="asteriskField">*</span> 
+                            </label> 
+                            <input class= "ml-4 rounded-l border border-gray-800 p-2 w-1/3" type="text" id="fname" name="fname" value="{{ user.first_name }} {{ user.last_name }}"><br>
+                            <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                Receiver Address
+                            </div>
+                            <div class="grid grid-cols-3 gap-4">
+                                <div id="div_id_customer-province" class="mb-3 ml-6 w-full w-1/3"> 
+                                    <label for="id_customer-province" class="block text-gray-700 text-sm font-bold mb-2">
+                                        Province<span class="asteriskField">*</span> 
+                                    </label> 
+                                    <select x-model="selectedProvince" x-on:change="loadCities()">
+                                        <template x-for="province in provinces" :key="province">
+                                            <option :value="province.province_id" x-text="province.province"></option>
+                                        </template>
+                                    </select>
                                 </div>
-                                <div class="text-muted text-base mt-2">
-                                    Quantity: {{ cart.quantity }}
+                                <div id="div_id_customer-city" class="mb-3 ml-6 w-full w-1/3"> 
+                                    <label for="id_customer-city" class="block text-gray-700 text-sm font-bold mb-2">
+                                        City<span class="asteriskField">*</span> 
+                                    </label>
+                                    <select name="customer-city" x-model="selectedCity" x-on:change="laadCityCost()">
+                                        <template x-for="city in cities" :key="city">
+                                            <option :value="city.city_id" x-text="city.city_name" ></option>
+                                        </template>
+                                    </select>
                                 </div>
                             </div>
-                            <div class="mt-2">
-                                <i class="fa fa-pencil-square-o fa-2x mr-2 cursor-pointer text-gray-700 hover:text-yellow-600" aria-hidden="true" data-toggle="modal" data-target="#edit-{{ cart.id }}"></i>
-                                <a class="text-gray-700 hover:text-red-600" href="{% url 'delete_cart' id=cart.id %}"><i class="fa fa-trash-o fa-2x" aria-hidden="true" onclick="return confirm('Delete this item from cart?')"></i> </a>
+                            <div class="ml-6 mb-2 mt-2 w-1/3">
+                                {{ customer_form.postal_code|as_crispy_field }}
                             </div>
-                        </div> 
-                        <hr class="pb-2 mt-2">n>
-                                </div>
-                </div>
-                <div class="col-3">
-                    <div class="absolute ml-4 w-full z-10">
-                        <div class="w-72 rounded border-2 p-1">
-                            <div class="p-2 flex bg-white">
-                                <div class="flex-auto text-sm w-32">
-                                    <div class="font-bold">Subtotal</div>
-                                </div>
+                            <div class="ml-6 mb-2 w-1/2">
+                                {{ customer_form.address|as_crispy_field }}
                             </div>
-                            <div class="p-2 flex bg-white hover:bg-gray-100 ">
-                                <div class="flex-auto text-sm w-32">
-                                    <div class="">Total price</div>
-                                </div>
-                                <div class="flex flex-col w-18 font-medium items-end ">
-                                    Rp. {{ total_price.total_price__sum }}
-                                </div>
+                            <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                Receiver Phone number
                             </div>
-                            <div class="p-4 justify-center flex">
-                                <button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold 
-                                    hover:bg-teal-700
-                                    bg-maddi-1 
-                                    text-white
-                                    w 
-                                    border duration-200 ease-in-out 
-                                    border-teal-600 transition">Checkout</button>
+                            <div class="ml-6 mb-2 w-1/2">
+                                {{ customer_form.phone_number|as_crispy_field }}
+                            </div>
+                            <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                Courrier
+                            </div>
+                            <label for="courrier" class="block text-gray-700 text-sm font-bold mb-2 ml-4">
+                                Select Courrier<span class="asteriskField">*</span> 
+                            </label>
+                            <select class="ml-6 mb-6 w-1/3" id="courrier" name="courrier" x-on:change="loadCost()">
+                                <option value="0">JNE OKE</option>
+                                <option value="1">JNE REG</option>
+                              </select>
+                              <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                  Payment Method
+                              </div>
+                              <label for="payment" class="block text-gray-700 text-sm font-bold mb-2 ml-4">
+                                Select Payment Method<span class="asteriskField">*</span> 
+                            </label>
+                              <select class="ml-6 mb-6 w-1/3" id="payment" name="payment">
+                                  <option value="Bank Transfer">Bank Transfer</option>
+                                  <option value="OVO">OVO</option>
+                                  <option value="GO-PAY">GO-PAY</option>
+                                </select>
+                            <div class="grid grid-cols-3">
+                                <a href="{% url 'cart' %}" class="ml-6 bg-red-700 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 text-center" role="button" onclick="return confirm('Are you sure to cancel?')">Cancel Order</a>
+                                <button class="ml-6 bg-maddi-1 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200" type="submit" onclick="return confirm('Are you sure to confirm order?')">Confirm Order</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="w-1/4 mr-6">
+                        
+                        <div class="col-3">
+                            <div class="absolute ml-4 w-full z-10">
+                                <div class="w-72 rounded border-2 p-1">
+                                    <div class="p-2 flex bg-white">
+                                        <div class="flex-auto text-sm w-32">
+                                            <div class="font-bold">Subtotal</div>
+                                        </div>
+                                    </div>
+                                    <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                                        <div class="flex-auto text-sm w-32">
+                                            <div>Total price</div>
+                                        </div>
+                                        <div class="flex flex-col w-18 font-medium items-end ">
+                                            Rp. {{ total_price.total_price__sum }}
+                                        </div>
+                                    </div>
+                                    <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                                        <div class="flex-auto text-sm w-32">
+                                            <div>Shipping</div>
+                                        </div>
+                                        <div class="w-18 font-medium">
+                                            Rp. <span x-text="shippingPrice"></span>
+                                        </div>
+                                    </div>
+                                    <hr class="pb-2 mt-2">
+                                    <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                                        <div class="flex-auto text-sm w-32">
+                                            <div class="text-bold">Total payment</div>
+                                        </div>
+                                        <div id="totalPayment"class="w-18 font-medium items-end ">
+                                            Rp. <span x-text="paymentPrice"></span>
+                                        </div>
+                                    </div>
+                                    <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                                        <div class="flex-auto text-sm w-32">
+                                            <div class="text-bold">Estimated Time Arrived</div>
+                                        </div>
+                                        <div class="w-18 font-medium items-end ">
+                                            <span x-text="shippingEtd"></span> days
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -58,5 +134,73 @@
             </div>
         </div>
     </div>
-</div>
+{% endblock %}
+
+{% block js %}
+<script>
+    function cities() {
+        return {
+            selectedProvince: 1,
+            selectedCity: 0,
+            provinces: [],
+            cities: [],
+            shippingDetail: [],
+            shippingPrice: 0,
+            paymentPrice: 0,
+            shippingEtd: '',
+            loadCity() {
+                let self = this;
+                axios.get('http://127.0.0.1:8000/city/' + '{{ request.user.customer.city }}').then(function (response) {
+                    // handle success
+                    self.selectedProvince = response.data.rajaongkir.results.province_id;
+                    self.selectedCity = {{ request.user.customer.city }};
+                    self.loadProvinces();
+                }).catch(function (error) {
+                    // handle error
+                    console.log(error);
+                });
+            },
+            loadProvinces() {
+                console.log("halo")
+                let self = this;
+                axios.get('http://127.0.0.1:8000/provinces/').then(function (response) {
+                    // handle success
+                    self.provinces = response.data.rajaongkir.results;
+                    self.loadCities();
+                }).catch(function (error) {
+                    // handle error
+                    console.log(error);
+                });
+            },
+            loadCities() {
+                let self = this;
+                self.cities = [];
+                axios.get('http://127.0.0.1:8000/cities/' + self.selectedProvince).then(function (response) {
+                    // handle success
+                    self.cities = response.data.rajaongkir.results;
+                    self.laadCityCost();
+                }).catch(function (error) {
+                    // handle error
+                    console.log(error);
+                });
+            },
+            laadCityCost() {
+                let self = this;
+                axios.get('http://127.0.0.1:8000/cost/' + self.selectedCity).then(function (secondResponse) {
+                    self.shippingDetail = secondResponse.data.rajaongkir.results[0]
+                    self.loadCost();
+                }).catch(function (error) {
+                    // handle error
+                    console.log(error);
+                });
+            },
+            loadCost() {
+                let self = this;
+                self.shippingPrice = self.shippingDetail.costs[document.getElementById('courrier').value].cost[0].value;
+                self.paymentPrice = {{ total_price.total_price__sum }} + self.shippingPrice;
+                self.shippingEtd = self.shippingDetail.costs[document.getElementById('courrier').value].cost[0].etd;
+            }
+        }
+    }
+</script>
 {% endblock %}
