--- a/maddi_app/templates/maddi_app/item/retrieve.html
+++ b/maddi_app/templates/maddi_app/item/retrieve.html
@@ -28,50 +28,40 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-6">
       <div class="flex flex-col md:flex-row -mx-4">
         <div class="md:flex-1 px-4">
-          <div x-data="{ image: 1 }" x-cloak>
-            <div class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4">
-              <div x-show="image === 1" class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
-                <span class="text-5xl">1</span>
-              </div>
-  
-              <div x-show="image === 2" class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
-                <span class="text-5xl">2</span>
-              </div>
-  
-              <div x-show="image === 3" class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
-                <span class="text-5xl">3</span>
-              </div>
-  
-              <div x-show="image === 4" class="h-64 md:h-80 rounded-lg bg-gray-100 mb-4 flex items-center justify-center">
-                <span class="text-5xl">4</span>
-              </div>
-            </div>
-  
-            <div class="flex -mx-2 mb-4">
-              <template x-for="i in 4">
-                <div class="flex-1 px-2">
-                  <button x-on:click="image = i" :class="{ 'ring-2 ring-indigo-300 ring-inset': image === i }" class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center">
-                    <span x-text="i" class="text-2xl"></span>
-                  </button>
-                </div>
-              </template>
-            </div>
-          </div>
+          <img src="{{ item.image.url }}"> 
         </div>
         <div class="md:flex-1 px-4">
           <h2 class="mb-2 leading-tight tracking-tight font-bold text-gray-800 text-2xl md:text-3xl">{{ item }}</h2>
           <h2 class="mb-2 leading-tight tracking-tight text-gray-800 text-2xl md:text-3xl">Rp {{ item.price }}</h2>
-          {% if item.stock == 1 %}
-            <h4 class="font-semibold mt-3">Last stock, grab it fast!</h4>
-          {% elif item.stock < 10 %}
-            <h4 class="font-semibold mt-3">Stock < 10</h4>
+          {% if user.is_superuser or user.is_staff %}
+            <h4 class="font-semibold mt-3">Stock: {{ item.stock }}</h4>
           {% else %}
-            <h4 class="font-semibold mt-3">Stock > 10</h4>
+            {% if item.stock == 1 %}
+              <h4 class="font-semibold mt-3">Last stock, grab it fast!</h4>
+            {% elif item.stock < 10 %}
+              <h4 class="font-semibold mt-3">Stock < 10</h4>
+            {% else %}
+              <h4 class="font-semibold mt-3">Stock > 10</h4>
+            {% endif %}
           {% endif %}
           <div style="white-space: pre-line">
             {{ item.description }}
           </div>
-          <p class="mt-8">Quantity</p>
+          {% if user.is_superuser or user.is_staff %}
+          <div class="flex space-x-4 mt-6">
+            <a href="{% url 'update_item' id=item.id %}" class="hover:text-white">
+              <button class="h-10 px-4 mt-2 font-semibold rounded-xl bg-yellow-500 hover:bg-yellow-600 text-white">
+                  Edit Item
+              </button>
+            </a>
+            <a href="{% url 'delete_item' id=item.id %}" class="hover:text-white" onclick="return confirm('Delete this item?')">
+              <button class="h-10 px-4 mt-2 font-semibold rounded-xl bg-red-500 hover:bg-red-700 text-white">
+                  Delete Item
+              </button>
+            </a>
+        </div>
+        {% else %}
+        <p class="mt-8">Quantity</p>
           <div class="flex space-x-4">
             <form method="POST" action="{% url 'add_to_cart' %}">
               {% csrf_token %}
@@ -82,26 +72,7 @@
               </button>
             </form>
         </div>
-
-          <p class="font-semibold mt-8 mb-2">Item Rating</p>
-          <div class="flex space-x-3">
-            <svg class="w-12 h-12 text-yellow-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-            </svg>
-            <svg class="w-12 h-12 text-yellow-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-            </svg>
-            <svg class="w-12 h-12 text-yellow-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-            </svg>
-            <svg class="w-12 h-12 text-yellow-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-            </svg>
-            <svg class="w-12 h-12 text-yellow-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-            </svg>
-            <h4 class="font-semibold mt-3"> 5 / 5</h4>
-          </div>
+        {% endif %}
         </div>
       </div>
     </div>
