--- a/maddi_app/templates/maddi_app/news.html
+++ b/maddi_app/templates/maddi_app/news.html
@@ -6,51 +6,67 @@
     <div class="centered container mx-auto px-6 my-8">
         <h1 class="text-center my-4 text-3xl">
             News
-        </h1>
+        </h1>               
         {% if user.is_superuser or user.is_staff %}
         <div class="w-full md:w-100 md:text-right">
-            <a href="{% url 'create_item' %}">
+            <a href="{% url 'create_news' %}">
               <button type="button" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
-                Add new item
-        </button>
+                Add news 
+              </button>
+            </a>
+        </div>
         {% endif %}
 
+
         <ul class="list-group centered">
-            <div class="accordion" id="accordionExample">
-                <li>
+          {% for n in news %}
+              <div id="accordionExample">
+                  <li>
                     <div class="card border-light mb-3">
-                    <button class="" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">  
-                    <div class="card-header" id="headingOne">
+                    <button class="" data-toggle="collapse" data-target="#collapse-{{ n.id }}" aria-expanded="true" aria-controls="collapse-{{ n.id }}">  
+                    <div class="card-header" id="heading-{{ n.id }}">
                       
                       <div class="container">
                           <div class="row">
                             <div class="text-gray-500">
-                                <h1 class="text-5xl">26</h1>
+                                <h1 class="text-5xl">{{ n.date|date:"d" }}</h1>
                             </div>
                             <div class="grid grid-cols-1 my-auto text-gray-500">
-                                <h1 class="text-md italic font-bold">DES</h1>
-                                <h1 class="text-md italic">2020</h1>
+                                <h1 class="text-md italic font-bold">{{ n.date|date:"M" }}</h1>
+                                <h1 class="text-md italic">{{ n.date|date:"Y" }}</h1>
                             </div>
                             <div class="mx-2 my-auto">
                               <h5 class="mb-0 ml-2 text-3xl my-auto">
-                                MaddiBazar
+                                {{ n.title }}
                               </h5>
                             </div>
+                            <div class="col-lg">
+                            </div>
+                            {% if user.is_superuser or user.is_staff %}
+                            <div class="mx-2 my-auto">
+                              <a href="{% url 'update_news' id=n.id %}" class="btn btn-primary btn-md btn-light font-semibold rounded-xl bg-yellow-500 hover:bg-yellow-600 text-white" role="button" aria-disabled="true">
+                                Edit
+                              </a>
+                              <a href="{% url 'delete_news' id=n.id %}" class="btn btn-primary btn-md btn-light font-semibold rounded-xl bg-red-500 hover:bg-red-600 text-white" role="button" aria-disabled="true" onclick="return confirm('Delete this news?')">
+                                Delete
+                              </a>
+                            </div>
+                            {% endif %}
                           </div>
                       </div>
                     </div>
                     </button>
                 
                 
-                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div id="collapse-{{ n.id }}" class="collapse" aria-labelledby="heading-{{ n.id }}" data-parent="#accordionExample">
                       <div class="card-body">
                         <div class="container">
                             <div class="row">
                               <div class="col- w-25">
-                                <img src="https://blue.kumparan.com/image/upload/fl_progressive,fl_lossy,c_fill,q_auto:best,w_640/v1570607681/y5oylx0snbuss0uld4if.jpg" alt="placeholder">
+                                <img src="{{ n.image.url }}" alt="placeholder">
                               </div>
                               <div class="col-sm">
-                                Anime pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard
+                                {{ n.body }}
                               </div>
                             </div>
                           </div>
@@ -60,6 +76,9 @@
                   </div>
                 </li>                
               </div>
+          {% endfor %}
+              
+        </ul>
       </div>
       
 {% endblock %}
