--- a/maddi_app/templates/maddi_app/user.html
+++ b/maddi_app/templates/maddi_app/user.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="container mx-auto px-6 my-8">
-  <h2 class="mb-8 leading-tight tracking-tight font-bold text-gray-800 text-2xl md:text-3xl">Users List</h2>
+  <h2 class="mb-8 leading-tight tracking-tight font-bold text-gray-800 text-2xl md:text-3xl text-center">Users List</h2>
   <a href="{% url 'create_user' %}">
-    <button type="button" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
+    <button type="button" class="float-right border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
       Add new user
     </button>
   </a>
