--- a/maddi_app/templates/maddi_app/payment_method.html
+++ b/maddi_app/templates/maddi_app/payment_method.html
@@ -43,7 +43,19 @@
                   <div class="card-body">
                     <div class="container">
                         <div class="row">
-                            <h1>Untuk Bank Jago AMPUUUNNNNN</h1>
+                            <ol>
+                                <li>
+                                    Setelah melakukan pemesanan, silahkan melakukan pembayaran dengan melakukan transfer ke salah satu dari rekening Maddi:
+                                </li>
+                                <ol class="list-disc mx-4" >
+                                    <li>
+                                        BCA 1300-290-333 an. Auza Madanisa
+                                    </li>
+                                    <li>
+                                        Mandiri 142-00-1563-369-5 an. Auza Madanisa
+                                    </li>    
+                                </ol>
+                            </ol>
                         </div>
                       </div>
                   </div>
@@ -73,9 +85,9 @@
                             <h1 class="text-md italic">1000</h1> -->
                         </div>
                         <div class="mx-2 my-auto">
-                          <h5 class="mb-0 ml-2 text-3xl my-auto">
-                           Transfer menggunakan OVO/GOPAY
-                          </h5>
+                            <ol>
+                                <li></li>
+                            </ol>
                         </div>
                         <div class="col-lg">
                         </div>
