--- a/maddi_app/templates/maddi_app/cart.html
+++ b/maddi_app/templates/maddi_app/cart.html
@@ -38,60 +38,64 @@
                         <hr class="pb-2 mt-2">
                         <div class="modal fade" id="edit-{{ cart.id }}" tabindex="-1" role="dialog" aria-labelledby="editModal-{{ cart.id }}" aria-hidden="true">
                             <div class="modal-dialog" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title">Change item details</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h5 class="modal-title">Change item details</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form method="POST" action="{% url 'update_cart' %}" id="editForm-{{ cart.id }}">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="id" value="{{ cart.id }}">
+                                            <label class="text-muted" for="message">Notes for this product</label><br>
+                                            <textarea class="w-100 border border-gray-600 p-2" rows="4" type="text" name="message">{{ cart.message }}</textarea>
+                                            <label class="text-muted mt-3" for="quantity">Quantity</label><br>
+                                            <input class="border h-14 w-24 rounded-xl p-3 text-center" type="number" name="quantity" min="1" value="{{ cart.quantity }}">
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                    <button type="button" class="border border-gray-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-gray-600 focus:outline-none focus:shadow-outline" data-dismiss="modal">Close</button>
+                                    <button type="submit" form="editForm-{{ cart.id }}" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">Update</button>
+                                    </div>
                                 </div>
-                                <div class="modal-body">
-                                    <form method="POST" action="{% url 'update_cart' %}" id="editForm-{{ cart.id }}">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="id" value="{{ cart.id }}">
-                                        <label class="text-muted" for="message">Notes for this product</label><br>
-                                        <textarea class="w-100 border border-gray-600 p-2" rows="4" type="text" name="message">{{ cart.message }}</textarea>
-                                        <label class="text-muted mt-3" for="quantity">Quantity</label><br>
-                                        <input class="border h-14 w-24 rounded-xl p-3 text-center" type="number" name="quantity" min="1" value="{{ cart.quantity }}">
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="border border-gray-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-gray-600 focus:outline-none focus:shadow-outline" data-dismiss="modal">Close</button>
-                                  <button type="submit" form="editForm-{{ cart.id }}" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">Update</button>
-                                </div>
-                              </div>
                             </div>
-                          </div>
+                        </div>
+                    {% empty %}
+                        <h3>Your cart is empty.</h3>
                     {% endfor %}
                 </div>
-                <div class="col-3">
-                    <div class="absolute ml-4 w-full z-10">
-                        <div class="w-72 rounded border-2 p-1">
-                            <div class="p-2 flex bg-white">
-                                <div class="flex-auto text-sm w-32">
-                                    <div class="font-bold">Subtotal</div>
+                {% if carts %}
+                    <div class="col-3">
+                        <div class="absolute ml-4 w-full z-10">
+                            <div class="w-72 rounded border-2 p-1">
+                                <div class="p-2 flex bg-white">
+                                    <div class="flex-auto text-sm w-32">
+                                        <div class="font-bold">Subtotal</div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="p-2 flex bg-white hover:bg-gray-100 ">
-                                <div class="flex-auto text-sm w-32">
-                                    <div class="">Total price</div>
+                                <div class="p-2 flex bg-white hover:bg-gray-100 ">
+                                    <div class="flex-auto text-sm w-32">
+                                        <div class="">Total price</div>
+                                    </div>
+                                    <div class="flex flex-col w-18 font-medium items-end ">
+                                        Rp. {{ total_price.total_price__sum }}
+                                    </div>
                                 </div>
-                                <div class="flex flex-col w-18 font-medium items-end ">
-                                    Rp. {{ total_price.total_price__sum }}
+                                <div class="p-4 justify-center flex">
+                                    <a href="{% url 'checkout' %}"><button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold 
+                                        hover:bg-teal-700
+                                        bg-maddi-1 
+                                        text-white
+                                        w 
+                                        border duration-200 ease-in-out 
+                                        border-teal-600 transition">Checkout</button>
                                 </div>
-                            </div>
-                            <div class="p-4 justify-center flex">
-                                <a href="{% url 'checkout' %}"><button class="text-base  undefined  hover:scale-110 focus:outline-none flex justify-center px-4 py-2 rounded font-bold 
-                                    hover:bg-teal-700
-                                    bg-maddi-1 
-                                    text-white
-                                    w 
-                                    border duration-200 ease-in-out 
-                                    border-teal-600 transition">Checkout</button>
                             </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </div>
