--- a/maddi_app/templates/maddi_app/checkout.html
+++ b/maddi_app/templates/maddi_app/checkout.html
@@ -18,7 +18,7 @@
                             <label for="fname" class="block text-gray-700 text-sm font-bold mb-3 ml-4">
                                 Receiver Name<span class="asteriskField">*</span> 
                             </label> 
-                            <input class= "ml-4 rounded-l border border-gray-800 p-2 w-1/3" type="text" id="fname" name="fname" value="{{ user.first_name }} {{ user.last_name }}"><br>
+                            <input class= "ml-4 rounded-l border border-gray-800 p-2 w-1/3" type="text" id="fname" name="receiver_name" required value="{{ user.first_name }} {{ user.last_name }}"><br>
                             <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
                                 Receiver Address
                             </div>
@@ -37,8 +37,8 @@
                                     <label for="id_customer-city" class="block text-gray-700 text-sm font-bold mb-2">
                                         City<span class="asteriskField">*</span> 
                                     </label>
-                                    <select name="customer-city" x-model="selectedCity" x-on:change="laadCityCost()">
-                                        <template x-for="city in cities" :key="city">
+                                    <select id="city" name="city" x-model="selectedCity" x-on:change="loadCityCost()" required>
+                                        <template x-for="city in citiesList" :key="city">
                                             <option :value="city.city_id" x-text="city.city_name" ></option>
                                         </template>
                                     </select>
@@ -62,21 +62,24 @@
                             <label for="courrier" class="block text-gray-700 text-sm font-bold mb-2 ml-4">
                                 Select Courrier<span class="asteriskField">*</span> 
                             </label>
-                            <select class="ml-6 mb-6 w-1/3" id="courrier" name="courrier" x-on:change="loadCost()">
-                                <option value="0">JNE OKE</option>
-                                <option value="1">JNE REG</option>
-                              </select>
-                              <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
-                                  Payment Method
-                              </div>
-                              <label for="payment" class="block text-gray-700 text-sm font-bold mb-2 ml-4">
+                            <select class="ml-6 mb-6 w-1/3" id="courrier" name="courrier" x-on:change="loadCost()" required>
+                                <option value="1">JNE OKE</option>
+                                <option value="2">JNE REG</option>
+                            </select>
+                            <div class="w-1/6 pb-2 font-normal text-grey-darkest ml-6 mb-6 border-b">
+                                Payment Method
+                            </div>
+                            <label for="payment" class="block text-gray-700 text-sm font-bold mb-2 ml-4">
                                 Select Payment Method<span class="asteriskField">*</span> 
                             </label>
-                              <select class="ml-6 mb-6 w-1/3" id="payment" name="payment">
-                                  <option value="Bank Transfer">Bank Transfer</option>
-                                  <option value="OVO">OVO</option>
-                                  <option value="GO-PAY">GO-PAY</option>
-                                </select>
+                            <select class="ml-6 mb-6 w-1/3" id="payment" name="payment_method" required>
+                                <option value="Bank Transfer">Bank Transfer</option>
+                                <option value="OVO">OVO</option>
+                                <option value="GO-PAY">GO-PAY</option>
+                            </select>
+                            <input type="hidden" id="shipping_city_name" name="shipping_city">
+                            <input type="hidden" id="shipping_price_input" name="shipping_price">
+                            <input type="hidden" id="payment_input" name="payment_price">
                             <div class="grid grid-cols-3">
                                 <a href="{% url 'cart' %}" class="ml-6 bg-red-700 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200 text-center" role="button" onclick="return confirm('Are you sure to cancel?')">Cancel Order</a>
                                 <button class="ml-6 bg-maddi-1 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200" type="submit" onclick="return confirm('Are you sure to confirm order?')">Confirm Order</button>
@@ -143,7 +146,7 @@
             selectedProvince: 1,
             selectedCity: 0,
             provinces: [],
-            cities: [],
+            citiesList: [],
             shippingDetail: [],
             shippingPrice: 0,
             paymentPrice: 0,
@@ -154,6 +157,7 @@
                     // handle success
                     self.selectedProvince = response.data.rajaongkir.results.province_id;
                     self.selectedCity = {{ request.user.customer.city }};
+
                     self.loadProvinces();
                 }).catch(function (error) {
                     // handle error
@@ -161,7 +165,6 @@
                 });
             },
             loadProvinces() {
-                console.log("halo")
                 let self = this;
                 axios.get('http://127.0.0.1:8000/provinces/').then(function (response) {
                     // handle success
@@ -174,17 +177,17 @@
             },
             loadCities() {
                 let self = this;
-                self.cities = [];
+                self.citiesList = [];
                 axios.get('http://127.0.0.1:8000/cities/' + self.selectedProvince).then(function (response) {
                     // handle success
-                    self.cities = response.data.rajaongkir.results;
-                    self.laadCityCost();
+                    self.citiesList = response.data.rajaongkir.results;
+                    self.loadCityCost();
                 }).catch(function (error) {
                     // handle error
                     console.log(error);
                 });
             },
-            laadCityCost() {
+            loadCityCost() {
                 let self = this;
                 axios.get('http://127.0.0.1:8000/cost/' + self.selectedCity).then(function (secondResponse) {
                     self.shippingDetail = secondResponse.data.rajaongkir.results[0]
@@ -198,7 +201,10 @@
                 let self = this;
                 self.shippingPrice = self.shippingDetail.costs[document.getElementById('courrier').value].cost[0].value;
                 self.paymentPrice = {{ total_price.total_price__sum }} + self.shippingPrice;
+                document.getElementById('shipping_price_input').value = self.shippingPrice;
+                document.getElementById('payment_input').value = self.paymentPrice;
                 self.shippingEtd = self.shippingDetail.costs[document.getElementById('courrier').value].cost[0].etd;
+                document.getElementById('shipping_city_name').value = $(`#city option[value='${self. selectedCity}'`).text();
             }
         }
     }
