--- a/maddi_app/templates/maddi_app/shop.html
+++ b/maddi_app/templates/maddi_app/shop.html
@@ -9,15 +9,19 @@
           <h3 class="text-gray-700 text-2xl font-medium">Tops & Bottoms</h3>
           <span class="mt-3 text-sm text-gray-500">200+ Products</span>
         </div>
-        {% if user.is_superuser or user.is_staff %}
         <div class="w-full md:w-1/2 md:text-right">
-          <a href="{% url 'create_item' %}">
-            <button type="button" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
-              Add new item
-          </button>
-        </a>
+          <form class="form-inline float-right">
+            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search" type="submit">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            {% if user.is_superuser or user.is_staff %}
+              <a href="{% url 'create_item' %}">
+                <button type="button" class="border border-green-500 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-600 focus:outline-none focus:shadow-outline">
+                  Add new item
+                </button>
+              </a>
+            {% endif %}
+          </form>
         </div>
-        {% endif %}
     </div>
     <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-6">
       {% for item in items %}
