--- a/maddi_app/templates/maddi_app/payment_method.html
+++ b/maddi_app/templates/maddi_app/payment_method.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="centered container mx-auto px-6 my-8">
     <h1 class="text-center my-4 text-3xl">
-        Newsio
+        Metode Pembayaran
     </h1>               
 
 
@@ -76,32 +76,33 @@
                           <div class="my-1 w-10" >
                             <img src="https://asset.kompas.com/crops/DAPlq4jQK0wFUY84bwiwcnX27kU=/0x0:780x390/780x390/data/photo/2017/01/11/1631493logo-black780x390.jpg">
                           </div>
-                          
-
-                            <!-- <h1 class="text-5xl">1</h1>
-                        </div>
-                        <div class="grid grid-cols-1 my-auto text-gray-500">
-                            <h1 class="text-md italic font-bold">2</h1>
-                            <h1 class="text-md italic">1000</h1> -->
                         </div>
                         <div class="mx-2 my-auto">
-                            <ol>
-                                <li></li>
-                            </ol>
+                          <h5 class="mb-0 ml-2 text-3xl my-auto">
+                            Transfer Ovo atau Gopay
+                          </h5>
                         </div>
                         <div class="col-lg">
                         </div>
                       </div>
                   </div>
-                </div>
+                </div>  
+              
                 </button>
-            
-            
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                   <div class="card-body">
                     <div class="container">
                         <div class="row">
-                            <h1>October Very Own</h1>
+                          <ol>
+                            <li>
+                                Setelah melakukan pemesanan, silahkan melakukan pembayaran dengan melakukan transfer ke-no dibawah ini:
+                            </li>
+                            <ol class="list-disc mx-4" >
+                                <li>
+                                    082233010154
+                                </li>
+                            </ol>
+                          </ol>
                         </div>
                       </div>
                   </div>
@@ -113,3 +114,9 @@
     </ul>
   </div>
 {% endblock %}
+
+ <!-- <h1 class="text-5xl">1</h1>
+                        </div>
+                        <div class="grid grid-cols-1 my-auto text-gray-500">
+                            <h1 class="text-md italic font-bold">2</h1>
+                            <h1 class="text-md italic">1000</h1> -->
