--- a/maddi_app/templates/maddi_app/index.html
+++ b/maddi_app/templates/maddi_app/index.html
@@ -10,4 +10,39 @@
     <p style="color: black;">Berbagi cerita lewat pakaian</p>
   </div>
 </div>
+
+<!-- <div class="container my-8 centered">
+  <div>
+    <div class="centered mx-8">
+      <h1 class="centered text-2xl">
+        Featured Product
+      </h1>
+    </div>
+  </div>
+
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../../../static/images/Maddi.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../static/images/Maddi.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../static/images/Maddi.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div> -->
+
+
+
 {% endblock %}
