--- a/maddi_app/templates/maddi_app/payment_method.html
+++ b/maddi_app/templates/maddi_app/payment_method.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="centered container mx-auto px-6 my-8">
     <h1 class="text-center my-4 text-3xl">
-        Metode Pembayaran
+        Payment Method
     </h1>               
 
 
@@ -28,7 +28,7 @@
                         </div>
                         <div class="mx-2 my-auto">
                           <h5 class="mb-0 ml-2 text-3xl my-auto">
-                           Transfer antar Bank
+                            Interbank Transfer
                           </h5>
                         </div>
                         <div class="col-lg">
@@ -45,14 +45,14 @@
                         <div class="row">
                             <ol>
                                 <li>
-                                    Setelah melakukan pemesanan, silahkan melakukan pembayaran dengan melakukan transfer ke salah satu dari rekening Maddi:
+                                  After placing an order, please make a payment by making a transfer to one of Maddi's accounts:
                                 </li>
                                 <ol class="list-disc mx-4" >
                                     <li>
-                                        BCA 1300-290-333 an. Auza Madanisa
+                                      BCA 1300-290-333 on behalf of Auza Madanisa
                                     </li>
                                     <li>
-                                        Mandiri 142-00-1563-369-5 an. Auza Madanisa
+                                        Mandiri 142-00-1563-369-5 on behalf of Auza Madanisa
                                     </li>    
                                 </ol>
                             </ol>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="mx-2 my-auto">
                           <h5 class="mb-0 ml-2 text-3xl my-auto">
-                            Transfer Ovo atau Gopay
+                            Transfer Using OVO or GOPAY
                           </h5>
                         </div>
                         <div class="col-lg">
@@ -95,7 +95,7 @@
                         <div class="row">
                           <ol>
                             <li>
-                                Setelah melakukan pemesanan, silahkan melakukan pembayaran dengan melakukan transfer ke-no dibawah ini:
+                              After placing an order, please make a payment by making a transfer to the number below:
                             </li>
                             <ol class="list-disc mx-4" >
                                 <li>
