--- a/maddi_app/templates/maddi_app/cart.html
+++ b/maddi_app/templates/maddi_app/cart.html
@@ -50,7 +50,11 @@
                                             {% csrf_token %}
                                             <input type="hidden" name="id" value="{{ cart.id }}">
                                             <label class="text-muted" for="message">Notes for this product</label><br>
-                                            <textarea class="w-100 border border-gray-600 p-2" rows="4" type="text" name="message">{{ cart.message }}</textarea>
+                                            {% if cart.message %}
+                                                <textarea class="w-100 border border-gray-600 p-2" rows="4" type="text" name="message">{{ cart.message }}</textarea>
+                                            {% else %}
+                                                <textarea class="w-100 border border-gray-600 p-2" rows="4" type="text" name="message"></textarea>
+                                            {% endif %}
                                             <label class="text-muted mt-3" for="quantity">Quantity</label><br>
                                             <input class="border h-14 w-24 rounded-xl p-3 text-center" type="number" name="quantity" min="1" value="{{ cart.quantity }}">
                                         </form>
