--- a/maddi_app/templates/maddi_app/index.html
+++ b/maddi_app/templates/maddi_app/index.html
@@ -11,38 +11,87 @@
   </div>
 </div>
 
-<!-- <div class="container my-8 centered">
-  <div>
-    <div class="centered mx-8">
-      <h1 class="centered text-2xl">
-        Featured Product
-      </h1>
+<div>
+  <h1 class="text-center my-4 text-4xl pb-6">Featured Products</h1>  
+    <div class="row">
+      {% for item in items %}
+      <div class="col ml-6">
+        <img src="{{ item.image.url }}">
+        <div class="text-2xl ml-2 mt-2">
+          {{ item.name }} <br>
+          {{ item.price }}
+        </div>
+      </div>
+      {% endfor %}
     </div>
-  </div>
-
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../../../static/images/Maddi.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../../../static/images/Maddi.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../../../static/images/Maddi.png" class="d-block w-100" alt="...">
-      </div>
+    <div class="text-center mt-8">
+      <a href="{% url 'shop' %}">
+        <button type="button" class="w-64 border border-gray-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-gray-500 focus:outline-none focus:shadow-outline">
+        Shop now
+        </button>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div> -->
+</div>
 
+
+<div class="centered container mx-auto px-6 my-8 mt-16">
+  <h1 class="text-center my-4 text-4xl">
+      News
+  </h1>        
+  <ul class="list-group centered">
+    {% for n in news %}
+        <div id="accordionExample">
+            <li>
+              <div class="card border-light mb-3">
+              <button class="" data-toggle="collapse" data-target="#collapse-{{ n.id }}" aria-expanded="true" aria-controls="collapse-{{ n.id }}">  
+              <div class="card-header" id="heading-{{ n.id }}">
+                
+                <div class="container">
+                    <div class="row">
+                      <div class="text-gray-500">
+                          <h1 class="text-5xl">{{ n.date|date:"d" }}</h1>
+                      </div>
+                      <div class="grid grid-cols-1 my-auto text-gray-500">
+                          <h1 class="text-md italic font-bold">{{ n.date|date:"M" }}</h1>
+                          <h1 class="text-md italic">{{ n.date|date:"Y" }}</h1>
+                      </div>
+                      <div class="mx-2 my-auto">
+                        <h5 class="mb-0 ml-2 text-3xl my-auto">
+                          {{ n.title }}
+                        </h5>
+                      </div>
+                      <div class="col-lg">
+                      </div>
+                    </div>
+                </div>
+              </div>
+              </button>
+          
+          
+              <div id="collapse-{{ n.id }}" class="collapse" aria-labelledby="heading-{{ n.id }}" data-parent="#accordionExample">
+                <div class="card-body">
+                  <div class="container">
+                      <div class="row">
+                        <div class="col- w-25">
+                          <img class="max-h-80" src="{{ n.image.url }}" alt="placeholder">
+                        </div>
+                        <div class="col-sm">
+                          {{ n.body }}
+                        </div>
+                      </div>
+                    </div>
+
+                </div>
+              </div>
+            </div>
+          </li>                
+        </div>
+    {% endfor %}
+        
+  </ul>
+</div>
+
+  
 
 
 {% endblock %}
