--- a/maddi_app/templates/maddi_app/purchase/retrieve.html
+++ b/maddi_app/templates/maddi_app/purchase/retrieve.html
@@ -9,7 +9,7 @@
             <div class="container mx-auto">
                 <h3 class="text-gray-700 text-2xl font-medium pb-12">Checkout</h3>
                 <div class="flex ">
-                    <div class="w-3/4">
+                    <div class="w-full">
                         {% for cart in carts %}
                             <div class="flex bg-white">
                                 <div class="p-2">
@@ -34,84 +34,64 @@
                             </div> 
                             <hr class="pb-2 mt-2">
                         {% endfor %}
-                    </div>
-                    <div class="w-1/4 mr-6">
-                        <div class="col-3">
-                            <div class="absolute ml-4 w-full z-10">
-                                <div class="w-72 rounded border-2 p-1">
-                                    <div class="p-2 flex bg-white">
-                                        <div class="flex-auto text-sm w-32">
-                                            <div class="font-bold mb-3">Status</div>
-                                        </div>
-                                    </div>
-                                    <div class="flex bg-white hover:bg-gray-100 ">
-                                        <div class="ml-3 flex-auto text-sm w-32">
-                                            <div><i class="fa fa-circle-o text-red-600" aria-hidden="true"> Payment Hasn't been done</i></div>
-                                        </div>
-                                    </div>
-                                    <div class="ml-3 flex bg-white hover:bg-gray-100 ">
-                                        <div class="flex-auto text-sm w-32">
-                                            <div class="ml-1">|</div>
-                                            <div><i class="fa fa-circle-o" aria-hidden="true"> Waiting for confirmatiom</i></div>
-                                        </div>
-                                    </div>
-                                    <div class="ml-3 flex bg-white hover:bg-gray-100 ">
-                                        <div class="flex-auto text-sm w-32">
-                                            <div class="ml-1">|</div>
-                                            <div><i class="fa fa-circle-o" aria-hidden="true"> Payment confirmed</i></div>
-                                        </div>
-                                    </div>
-                                    <div class="ml-3 flex bg-white hover:bg-gray-100 ">
-                                        <div class="flex-auto text-sm w-32">
-                                            <div class="ml-1">|</div>
-                                            <div><i class="fa fa-circle-o" aria-hidden="true"> Your item is being packed</i></div>
-                                        </div>
-                                    </div>
-                                    <div class="ml-3 flex bg-white hover:bg-gray-100 ">
-                                        <div class="flex-auto text-sm w-32">
-                                            <div class="ml-1">|</div>
-                                            <div><i class="fa fa-circle-o" aria-hidden="true"> Your item is being shipped</i></div>
-                                        </div>
-                                    </div>
-                                    <div class="ml-3 flex bg-white hover:bg-gray-100 ">
-                                        <div class="flex-auto text-sm w-32 mb-2">
-                                            <div class="ml-1">|</div>
-                                            <div><i class="fa fa-circle-o" aria-hidden="true"> Item arrived</i></div>
-                                        </div>
-                                    </div>
-                                 </div>
-                            </div>
+                        {% if not user.is_staff and not user.is_superuser and purchase.payment.status != 'diterima' %}
+                        <div class="text-center">
+                            <a href="{% url 'cancel_purchase' id=purchase.id %}">
+                                <button type="button" class="border border-gray-600 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-red-800 focus:outline-none focus:shadow-outline" onclick="return confirm('Cancel this Order?')">
+                                    Cancel Order
+                                </button>
+                            </a>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
                 <div>
                     <h3 class="text-gray-700 text-2xl font-medium mt-4 pb-12">Payment</h3>
-                    <h3 class="text-center text-gray-700 text-2xl font-medium">Upload payment confirmation</h3>
+                    <h3 class="text-center text-gray-700 text-2xl font-medium">Upload Proof of Payment</h3>
                     <div class="m-auto px-2 py-4 max-w-xl">
                     <div class="bg-white rounded border border-2" >
-                        <div>
-                            <img src="{{ purchase.payment.image }}" class="w-48 mr-3">
-                        </div>
+                        {% if purchase.payment.image %}
+                            <div>
+                                <img src="{{ purchase.payment.image.url }}" class="w-100 mr-3">
+                            </div>
+                        {% endif %}
                         {% if user.is_superuser or user.is_staff %}
+                            {% if purchase.payment.status == 'belum' %}
+                                <div class="text-center px-4 py-2 mt-2 bg-white">
+                                    Customer has not sent any proof of payment
+                                </div>
+                            {% elif purchase.payment.status == 'sudah' %}
+                                <div class="text-center px-4 py-2 mt-2 bg-white">
+                                    <form action="{% url 'process_payment_proof' id=purchase.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <button type="submit" name="status" value="ditolak" class="border border-gray-600 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-red-800 focus:outline-none focus:shadow-outline">
+                                            Decline payment
+                                        </button>
+                                        <button type="submit" name="status" value="diterima" class="border border-gray-600 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-800 focus:outline-none focus:shadow-outline">
+                                            Confirm payment
+                                        </button>
+                                    </form>         
+                                </div>
+                            {% elif purchase.payment.status == 'ditolak' %}
+                                <div class="text-center px-4 py-2 mt-2 bg-white">
+                                    Customer's proof of payment has been rejected
+                                </div>
+                            {% else %}
+                                <div class="text-center px-4 py-2 mt-2 bg-white">
+                                    Customer's proof of payment has been accepted
+                                </div>
+                            {% endif %}
+                        {% elif not purchase.payment.status == 'diterima' %}
                         <div class="text-center px-4 py-2 mt-2 bg-white">
-                            <a href="#">
-                                <button type="button" class="border border-gray-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-red-800 focus:outline-none focus:shadow-outline">
-                                  Decline payment
+                            <form method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="text-left">
+                                    {{ form|crispy }}
+                                </div>
+                                <button type="submit" class="border border-gray-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-gray-800 focus:outline-none focus:shadow-outline">
+                                    Upload proof of payment
                                 </button>
-                            </a>
-                            <a href="#">
-                                <button type="button" class="border border-gray-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-800 focus:outline-none focus:shadow-outline">
-                                  Confirm payment
-                                </button>
-                            </a>           
-                        </div>
-                        {% else %}
-                        <div class="text-center px-4 py-2 mt-2 bg-white">
-                            <a href="#">
-                                <button type="button" class="border border-gray-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-gray-800 focus:outline-none focus:shadow-outline">
-                                  Upload payment confirmation
-                                </button>
-                            </a>  
+                            </form>
                         </div>
                         {% endif %}
                     </div>
@@ -119,8 +99,63 @@
                 <hr class="pb-2 mt-2">
                 <div>
                     <h3 class="text-gray-700 text-2xl font-medium mt-4 pb-12">Shipment</h3>
+                    <div class="m-auto px-2 py-4 max-w-xl">
+                        <div class="bg-white rounded border border-2" >
+                            {% if user.is_superuser or user.is_staff %}
+                                {% if purchase.payment.status == 'diterima' %}
+                                    <div class="text-center px-4 py-2 mt-2 bg-white">
+                                        <form method="POST">
+                                            {% csrf_token %}
+                                            {{ form|crispy }}
+                                            <button type="submit" class="border border-gray-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-800 focus:outline-none focus:shadow-outline">
+                                                Confirm shipment
+                                            </button>
+                                        </form>
+                                    </div>
+                                {% elif purchase.shipping.status == 'diterima' %}
+                                    <div class="text-center px-4 py-2 mt-2 bg-white">
+                                        Customer's order has been accepted
+                                    </div>
+                                {% else %}
+                                    <div class="text-center px-4 py-2 mt-2 bg-white">
+                                        Customer's proof of payment has not been accepted
+                                    </div>
+                                {% endif %}
+                            {% else %}
+                            <div class="text-center px-4 py-2 mt-2 bg-white">
+                                <h3 class="text-gray-700 text-l font-medium">Shipping courrier : {{ purchase.shipping.courrier }}</h3>
+                            </div>
+                            <div class="text-center px-4 py-2 mt-2 bg-white">
+                                {% if purchase.shipping.status == 'belum' %}
+                                    Your order is being processed
+                                {% else %}
+                                    {% if purchase.shipping.status == 'sudah' %}
+                                        <div class="text-center px-4 py-2 mt-2 bg-white">
+                                            Your order is being delivered
+                                            <h3 class="text-gray-700 text-l font-medium">Delivery Receipt Number : {{ purchase.shipping.delivery_receipt_number }}</h3>
+                                        </div>
+                                        <form action="{% url 'complete_purchase' id=purchase.id %}" method="POST">
+                                            {% csrf_token %}
+
+                                            <button type="submit" class="border border-green-800 text-black rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:bg-green-800 focus:outline-none focus:shadow-outline">
+                                                Complete order
+                                            </button>
+                                        </form>
+                                    {% elif purchase.shipping.status == 'diterima' %}
+                                        <div class="text-center px-4 py-2 mt-2 bg-white">
+                                            Your order has been received
+                                        </div>
+                                    {% endif %}
+                                {% endif %}
+                            </div>
+                            {% endif %}
+                        </div> 
+                    </div>
+                        </div> 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
