--- a/maddi_app/templates/maddi_app/report_monthly.html
+++ b/maddi_app/templates/maddi_app/report_monthly.html
@@ -6,7 +6,7 @@
 <div id="container" class="w-100 my-4" x-data="chart()" x-init="loadChart()">
   <h1 class="text-center my-4 text-3xl">
     Monthly Report
-  </h1>   
+  </h1> 
   <canvas id="chart_maddi" class="px-20 py-8"></canvas>
 </div>
 {% endblock %}
@@ -14,7 +14,7 @@
 {% block js %}
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script>
-    let colors = ['#FFCBC1','#FFABAB'];
+    const colors = ['#FFB5E8', '#FF9CEE'];
 
     /* large line chart */
     const chart_maddi = document.getElementById("chart_maddi");
@@ -32,7 +32,7 @@
     function chart() {
       return {
         loadChart() {
-          axios.get('http://127.0.0.1:8000/chart_maddi').then(function (response) {
+          axios.get('http://127.0.0.1:8000/chart_maddi_monthly').then(function (response) {
             // handle success
             chart = response.data;
             chartData.labels = chart.labels;
