--- a/maddi_app/templates/maddi_app/index.html
+++ b/maddi_app/templates/maddi_app/index.html
@@ -11,13 +11,13 @@
   </div>
 </div>
 
-<div>
+<div class="mx-auto px-4">
   <h1 class="text-center my-4 text-4xl pb-6">Featured Products</h1>  
     <div class="row">
       {% for item in items %}
-      <div class="col ml-6">
-        <img src="{{ item.image.url }}">
-        <div class="text-2xl ml-2 mt-2">
+      <div class="col">
+        <img class="h-96 mx-auto" src="{{ item.image.url }}">
+        <div class="text-2xl ml-24 mt-2">
           {{ item.name }} <br>
           {{ item.price }}
         </div>
